--- a/estudos_pv/teste_site/index.html
+++ b/estudos_pv/teste_site/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SITE</title>
 </head>
-<body>
+<body> 
+    <link rel="stylesheet" href="style.css" />
     
     <div class="top-menu-space"></div>
 
